--- a/index.html
+++ b/index.html
@@ -10,53 +10,50 @@
 </head>
 
 <body>
-    <!-- .navbar-expand-{sm|md|lg|xl}決定在哪個斷點以上就出現漢堡式選單 -->
-    <!-- navbar-dark 文字顏色 .bg-dark 背景顏色 -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-        <!-- .navbar-brand 左上LOGO位置 -->
-        <a class="navbar-brand" href="index.html">
-            <img src="./Tetrapods.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-            <span class="h3 mx-1">Tetrapods</span>
-        </a>
-        <!-- .navbar-toggler 漢堡式選單按鈕 -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <!-- .navbar-toggler-icon 漢堡式選單Icon -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
+            aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- .collapse.navbar-collapse 用於外層中斷點群組和隱藏導覽列內容 -->
-        <!-- 選單項目&漢堡式折疊選單 -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
-                <!-- active表示當前頁面 -->
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">首頁<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">關於我</a>
+                    <a class="nav-link" href="#">Features</a>
                 </li>
-                <!-- .dropdown Navbar選項使用下拉式選單 -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">作品集</a>
-                    <!-- .dropdown-menu 下拉選單內容 -->
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">網頁設計</a>
-                        <a class="dropdown-item" href="#">平面設計</a>
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
                     </div>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search
-                </button>
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
-
     </nav>
 
+    <div></div>
+    <footer></footer>
 </body>
 
 </html>
