複製課程介紹&建立課表

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>海景第一排</title>
     <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
+    <style>
+        body {
+            background-color: lightblue;
+        }
+
+
+        table {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
@@ -51,9 +61,101 @@
             </form>
         </div>
     </nav>
+    <div class="jumbotron">
+        <h1 class="display-3">產業新尖兵-全端開發</h1>
+        <p class="lead">Web/Mobile App 是近年來最為普遍的軟體開發議題，業界對於 App前、中、後端的開發者需求甚高。 本課程從基礎的網頁設計與 Python 程式設計開始，最後講到結合 Web 伺服器與資料庫的 3-tier Web Application 開發，並且以 Python 程式語言貫穿所有重要的課程，藉此達成具有一貫性的課程設計，透過此課程的訓練，學員可以具備進入開發 Web Application 的能力。</p>
+        <hr class="my-4">
+        <p>Python 程式設計 Web 基礎網頁設計 Web 應用程式開發 資料庫整合應用</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        </p>
+      </div>
 
-    <div></div>
+    <div class="container">
+        <h3>
+            課程表
+            <small class="text-muted">4/12 ~ 4/16</small>
+        </h3>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">時間 \ 日期</th>
+                    <th scope="col">4/12(一)</th>
+                    <th scope="col">4/13(二)</th>
+                    <th scope="col">4/14(三)</th>
+                    <th scope="col">4/15(四)</th>
+                    <th scope="col">4/16(五)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-dark">
+                    <th>講師</th>
+                    <td>許展源</td>
+                    <td>許展源</td>
+                    <td>張又云</td>
+                    <td>張又云</td>
+                    <td></td>
+                </tr>
+                <tr class="table-primary">
+                    <th scope="row">09:10 - 10:00</th>
+                    <td>Web 基礎網頁設計</td>
+                    <td>Web 基礎網頁設計</td>
+                    <td>Web 應用程式開發</td>
+                    <td>Web 應用程式開發</td>
+                    <td></td>
+                </tr>
+                <tr class="table-secondary">
+                    <th scope="row">10:10 - 11:00</th>
+                    <td>Web 基礎網頁設計</td>
+                    <td>Web 基礎網頁設計</td>
+                    <td>Web 應用程式開發</td>
+                    <td>Web 應用程式開發</td>
+                    <td></td>
+                </tr>
+                <tr class="table-success">
+                    <th scope="row">11:10 - 12:00</th>
+                    <td>Web 基礎網頁設計</td>
+                    <td>Web 基礎網頁設計</td>
+                    <td>Web 應用程式開發</td>
+                    <td>Web 應用程式開發</td>
+                    <td></td>
+                </tr>
+                <tr class="table-danger">
+                    <th scope="row">12:10 - 13:00</th>
+                    <td colspan="5">午休</td>
+
+                </tr>
+                <tr class="table-warning">
+                    <th scope="row">13:10 - 14:00</th>
+                    <td>Web 基礎網頁設計實戰</td>
+                    <td>Web 基礎網頁設計實戰</td>
+                    <td>Web 應用程式開發</td>
+                    <td>Web 應用程式開發</td>
+                    <td></td>
+                </tr>
+                <tr class="table-info">
+                    <th scope="row">14:10 - 15:00</th>
+                    <td>Web 基礎網頁設計實戰</td>
+                    <td>Web 基礎網頁設計實戰</td>
+                    <td>Web 應用程式開發實戰</td>
+                    <td>Web 應用程式開發實戰</td>
+                    <td></td>
+                </tr>
+                <tr class="table-light">
+                    <th scope="row">15:10 - 16:00</th>
+                    <td>Web 基礎網頁設計實戰</td>
+                    <td>Web 基礎網頁設計實戰</td>
+                    <td>Web 應用程式開發實戰</td>
+                    <td>Web 應用程式開發實戰</td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
     <footer></footer>
+
+
 </body>
 
 </html>
