--- a/index.html
+++ b/index.html
@@ -12,16 +12,28 @@
             background-color: lightblue;
         }
 
-
-        table {
+        table,
+        footer {
             text-align: center;
+        }
+
+        body>div:nth-child(4) {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+
+        footer {
+            background-color: rgb(82, 82, 82);
+            color: rgb(255, 255, 255);
         }
     </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="./index.html"><img src="./Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,28 +42,21 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="./index.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#">課表</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                        aria-haspopup="true" aria-expanded="false">課程</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
+                        <a class="dropdown-item" href="./WebDesign.html">Web 基礎網頁設計</a>
+                        <a class="dropdown-item" href="./Python.html">Python 程式設計</a>
+                        <a class="dropdown-item" href="./WebApp.html">Web 應用程式開發</a>
+                        <a class="dropdown-item" href="./Database.html">資料庫應用</a>
                     </div>
                 </li>
             </ul>
@@ -63,13 +68,15 @@
     </nav>
     <div class="jumbotron">
         <h1 class="display-3">產業新尖兵-全端開發</h1>
-        <p class="lead">Web/Mobile App 是近年來最為普遍的軟體開發議題，業界對於 App前、中、後端的開發者需求甚高。 本課程從基礎的網頁設計與 Python 程式設計開始，最後講到結合 Web 伺服器與資料庫的 3-tier Web Application 開發，並且以 Python 程式語言貫穿所有重要的課程，藉此達成具有一貫性的課程設計，透過此課程的訓練，學員可以具備進入開發 Web Application 的能力。</p>
+        <p class="lead">Web/Mobile App 是近年來最為普遍的軟體開發議題，業界對於 App前、中、後端的開發者需求甚高。 本課程從基礎的網頁設計與 Python 程式設計開始，最後講到結合 Web
+            伺服器與資料庫的 3-tier Web Application 開發，並且以 Python 程式語言貫穿所有重要的課程，藉此達成具有一貫性的課程設計，透過此課程的訓練，學員可以具備進入開發 Web
+            Application 的能力。</p>
         <hr class="my-4">
         <p>Python 程式設計 Web 基礎網頁設計 Web 應用程式開發 資料庫整合應用</p>
         <p class="lead">
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </p>
-      </div>
+    </div>
 
     <div class="container">
         <h3>
@@ -153,9 +160,58 @@
         </table>
     </div>
 
-    <footer></footer>
+    <div>
+        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+            <div class="card-header">講師 許展源</div>
+            <div class="card-body">
+                <h4 class="card-title"><a href="./WebDesign.html">Web 基礎網頁設計</a></h4>
+                <p class="card-text">1. Git版本控制<br>
+                    2. HTML<br>
+                    3. CSS<br>
+                    4. Bootstrap<br>
+                    5. FontAwesome ... <br>
+                </p>
+            </div>
+        </div>
+        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+            <div class="card-header">講師 陳筠蕎</div>
+            <div class="card-body">
+                <h4 class="card-title"><a href="">Python 程式設計</a></h4>
+                <p class="card-text">1. Intro <br>
+                    2. Variables<br>
+                    3. Basic Operations<br>
+                    4. Data Types<br>
+                    5. I/O ... <br>
+                </p>
+            </div>
+        </div>
+        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+            <div class="card-header">講師 張又云</div>
+            <div class="card-body">
+                <h4 class="card-title"><a href="">Web 應用程式開發</a></h4>
+                <p class="card-text">1. OuO 保留文字空間<br>
 
+                </p>
+            </div>
+        </div>
+        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
+            <div class="card-header">講師 黃琮琪 </div>
+            <div class="card-body">
+                <h4 class="card-title"><a href="">資料庫應用></a></h4>
+                <p class="card-text">1. OuO 保留文字空間<br>
 
+                </p>
+            </div>
+        </div>
+    </div>
+    <footer>footer</footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
