補首頁課程介紹連結

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
-            flex-wrap: wrap;
+
         }
 
         footer {
@@ -176,7 +176,7 @@
         <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
             <div class="card-header">講師 陳筠蕎</div>
             <div class="card-body">
-                <h4 class="card-title"><a href="">Python 程式設計</a></h4>
+                <h4 class="card-title"><a href="./Python.html">Python 程式設計</a></h4>
                 <p class="card-text">1. Intro <br>
                     2. Variables<br>
                     3. Basic Operations<br>
@@ -188,7 +188,7 @@
         <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
             <div class="card-header">講師 張又云</div>
             <div class="card-body">
-                <h4 class="card-title"><a href="">Web 應用程式開發</a></h4>
+                <h4 class="card-title"><a href="./WebApp.html">Web 應用程式開發</a></h4>
                 <p class="card-text">1. OuO 保留文字空間<br>
 
                 </p>
@@ -197,7 +197,7 @@
         <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
             <div class="card-header">講師 黃琮琪 </div>
             <div class="card-body">
-                <h4 class="card-title"><a href="">資料庫應用></a></h4>
+                <h4 class="card-title"><a href="./Database.html">資料庫應用</a></h4>
                 <p class="card-text">1. OuO 保留文字空間<br>
 
                 </p>
