--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <a class="nav-link" data-toggle="tab" href="#week7">04/26 ~ 04/30</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#week8">05/3 ~ 05/07</a>
+                <a class="nav-link" data-toggle="tab" href="#week8">05/03 ~ 05/07</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="tab" href="#week9">05/10 ~ 05/14</a>
@@ -135,10 +135,10 @@
                         <tr class="table-dark">
                             <th>講師</th>
                             <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>許展源</td>
+                            <td>許展源</td>
+                            <td>許展源</td>
+                            <td>陳筠蕎</td>
                         </tr>
                         <tr class="table-primary">
                             <th scope="row">09:10 - 10:00</th>
