--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             text-align: center;
         }
 
-        body>div:nth-child(4) {
+        body>div:nth-child(5) {
             display: flex;
             flex-direction: row;
             justify-content: space-around;
@@ -36,7 +36,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="./index.html"><img src="./Tetrapods.jpg" width="40"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,9 +48,6 @@
                     <a class="nav-link" href="./index.html">Home
                         <span class="sr-only">(current)</span>
                     </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">課表</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
@@ -69,6 +66,32 @@
             </form>
         </div>
     </nav>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./image/sea2.jpg" class="d-block w-100" alt="阿圖片呢?">
+          </div>
+          <div class="carousel-item">
+            <img src="./image/sea.jpg" class="d-block w-100" alt="阿圖片呢?">
+          </div>
+          <div class="carousel-item">
+            <img src="./image/sea1.jpg" class="d-block w-100" alt="阿圖片呢?">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     <div class="jumbotron">
         <h1 class="display-3">產業新尖兵-全端開發</h1>
         <p class="lead">Web/Mobile App 是近年來最為普遍的軟體開發議題，業界對於 App前、中、後端的開發者需求甚高。 本課程從基礎的網頁設計與 Python 程式設計開始，最後講到結合 Web
