--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
         crossorigin="anonymous" />
     <style>
         body {
-            background-color: lightblue;
+            background-image: url(./image/18410.jpg);
+            background-size: cover;
         }
 
         table,
         footer {
             text-align: center;
         }
+
+        
 
         body>div:nth-child(5) {
             display: flex;
