--- a/Database.html
+++ b/Database.html
@@ -12,15 +12,23 @@
             background-color: lightblue;
         }
 
-        table,
         footer {
-            text-align: center;
+            background-color: rgb(82, 82, 82);
+            color: rgb(255, 255, 255);
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
         }
 
+        footer>div:nth-child(1) {
+            grid-column: 2;
+        }
 
-        footer{
-            background-color: rgb(82, 82, 82);
-            color: rgb(255,255,255);
+        footer>div:nth-child(2) {
+            grid-column: 6;
+        }
+
+        footer>div:nth-child(3) {
+            grid-column: -2;
         }
     </style>
 </head>
@@ -58,6 +66,12 @@
         </div>
     </nav>
 
+
+    <footer>
+        <div>組員名單:</div>
+        <div>E-mail:</div>
+        <div><a href="#top" style="color: lightyellow;">Back to Top</a></div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
