--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <style>
         body {
             background-image: url(./image/18410.jpg);
-            background-size: cover;
+            /*background-size: cover;*/
+            background-size: 100vw;
         }
 
-        table,
-        footer {
+        table {
             text-align: center;
         }
 
-        
+
 
         body>div:nth-child(5) {
             display: flex;
@@ -33,12 +33,26 @@
         footer {
             background-color: rgb(82, 82, 82);
             color: rgb(255, 255, 255);
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+        }
+
+        footer>div:nth-child(1) {
+            grid-column: 2;
+        }
+
+        footer>div:nth-child(2) {
+            grid-column: 6;
+        }
+
+        footer>div:nth-child(3) {
+            grid-column: -2;
         }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
         <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,30 +85,31 @@
     </nav>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./image/sea2.jpg" class="d-block w-100" alt="阿圖片呢?">
-          </div>
-          <div class="carousel-item">
-            <img src="./image/sea.jpg" class="d-block w-100" alt="阿圖片呢?">
-          </div>
-          <div class="carousel-item">
-            <img src="./image/sea1.jpg" class="d-block w-100" alt="阿圖片呢?">
-          </div>
+            <div class="carousel-item active">
+                <img src="./image/sea2.jpg" class="d-block w-100" alt="阿圖片呢?">
+            </div>
+            <div class="carousel-item">
+                <img src="./image/sea.jpg" class="d-block w-100" alt="阿圖片呢?">
+            </div>
+            <div class="carousel-item">
+                <img src="./image/sea1.jpg" class="d-block w-100" alt="阿圖片呢?">
+            </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
         </a>
-      </div>
+    </div>
+
     <div class="jumbotron">
         <h1 class="display-3">產業新尖兵-全端開發</h1>
         <p class="lead">Web/Mobile App 是近年來最為普遍的軟體開發議題，業界對於 App前、中、後端的開發者需求甚高。 本課程從基礎的網頁設計與 Python 程式設計開始，最後講到結合 Web
@@ -103,9 +118,11 @@
         <hr class="my-4">
         <p>Python 程式設計 Web 基礎網頁設計 Web 應用程式開發 資料庫整合應用</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="#allclass" role="button">Learn
+                more</a>
         </p>
     </div>
+
 
     <div class="container">
         <h3>
@@ -918,52 +935,106 @@
         </div>
     </div>
 
-    <div>
-        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-            <div class="card-header">講師 許展源</div>
+    <div id="allclass">
+        <div class="card mb-3">
+            <h3 class="card-header">WEB 基礎網頁設計</h3>
             <div class="card-body">
-                <h4 class="card-title"><a href="./WebDesign.html">Web 基礎網頁設計</a></h4>
-                <p class="card-text">1. Git版本控制<br>
-                    2. HTML<br>
-                    3. CSS<br>
-                    4. Bootstrap<br>
-                    5. FontAwesome ... <br>
-                </p>
+                <h5 class="card-title">Special title treatment</h5>
+                <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+            </div>
+            <img src="./">
+            <div class="card-body">
+                <p class="card-text"></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">1. Git版本控制</li>
+                <li class="list-group-item">2. HTML</li>
+                <li class="list-group-item">3. CSS</li>
+                <li class="list-group-item">4. Bootstrap</li>
+            </ul>
+            <div class="card-body">
+                <a href="./WebDesign.html" class="card-link">更多</a>
+            </div>
+            <div class="card-footer text-muted">
+                講師 許展源
             </div>
         </div>
-        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-            <div class="card-header">講師 陳筠蕎</div>
+        <div class="card mb-3">
+            <h3 class="card-header">Python程式設計</h3>
             <div class="card-body">
-                <h4 class="card-title"><a href="./Python.html">Python 程式設計</a></h4>
-                <p class="card-text">1. Intro <br>
-                    2. Variables<br>
-                    3. Basic Operations<br>
-                    4. Data Types<br>
-                    5. I/O ... <br>
-                </p>
+                <h5 class="card-title">Special title treatment</h5>
+                <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+            </div>
+            <img src="./">
+            <div class="card-body">
+                <p class="card-text"></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">1. Intro</li>
+                <li class="list-group-item">2. Variables</li>
+                <li class="list-group-item">3. Basic Operations</li>
+                <li class="list-group-item">4. Data Types</li>
+            </ul>
+            <div class="card-body">
+                <a href="./Python.html" class="card-link">更多</a>
+            </div>
+            <div class="card-footer text-muted">
+                講師 陳筠蕎
             </div>
         </div>
-        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-            <div class="card-header">講師 張又云</div>
+        <div class="card mb-3">
+            <h3 class="card-header">WEB 應用程式開發</h3>
             <div class="card-body">
-                <h4 class="card-title"><a href="./WebApp.html">Web 應用程式開發</a></h4>
-                <p class="card-text">1. OuO 保留文字空間<br>
-
-                </p>
+                <h5 class="card-title">Special title treatment</h5>
+                <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+            </div>
+            <img src="./">
+            <div class="card-body">
+                <p class="card-text"></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">1. OuO 保留文字空間</li>
+                <li class="list-group-item">2. </li>
+                <li class="list-group-item">3. </li>
+                <li class="list-group-item">4. </li>
+            </ul>
+            <div class="card-body">
+                <a href="./WebApp.html" class="card-link">更多</a>
+            </div>
+            <div class="card-footer text-muted">
+                講師 張又云
             </div>
         </div>
-        <div class="card text-white bg-warning mb-3" style="max-width: 20rem;">
-            <div class="card-header">講師 黃琮琪 </div>
+        <div class="card mb-3">
+            <h3 class="card-header">資料庫應用</h3>
             <div class="card-body">
-                <h4 class="card-title"><a href="./Database.html">資料庫應用</a></h4>
-                <p class="card-text">1. OuO 保留文字空間<br>
-
-                </p>
+                <h5 class="card-title">Special title treatment</h5>
+                <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+            </div>
+            <img src="./">
+            <div class="card-body">
+                <p class="card-text"></p>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">1. OuO 保留文字空間</li>
+                <li class="list-group-item">2. </li>
+                <li class="list-group-item">3. </li>
+                <li class="list-group-item">4. </li>
+            </ul>
+            <div class="card-body">
+                <a href="./Database.html" class="card-link">更多</a>
+            </div>
+            <div class="card-footer text-muted">
+                講師 廖柏瑜 & 黃琮琪
             </div>
         </div>
     </div>
 
-    <footer><i class="fas fa-angle-double-right"></i> footer <i class="fas fa-angle-double-left"></i></footer>
+    <footer>
+        <div>組員名單:</div>
+        <div>E-mail:</div>
+        <div><a href="#top" style="color: lightyellow;">Back to Top</a></div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
