改導覽列 &首頁下方增加圖片

--- a/WebApp.html
+++ b/WebApp.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="top">
         <a class="navbar-brand" href="./index.html"><img src="./image/Tetrapods.jpg" width="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,12 +49,24 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">課程</a>
+                        aria-haspopup="true" aria-expanded="false">Web 基礎網頁設計</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="./WebDesign.html">Web 基礎網頁設計</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp">w3schools HTML</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/css/default.asp">w3schools CSS</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/js/default.asp">w3schools JS</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp">w3schools Bootstrap</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        aria-haspopup="true" aria-expanded="false">Python 程式設計</a>
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="./Python.html">Python 程式設計</a>
-                        <a class="dropdown-item" href="./WebApp.html">Web 應用程式開發</a>
-                        <a class="dropdown-item" href="./Database.html">資料庫應用</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.w3schools.com/python/default.asp">w3schools
+                            Python</a>
                     </div>
                 </li>
             </ul>
