--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
-
         }
+
+        body>div:nth-child(5) img {
+            width: 310px;
+            height: 230px;
+        }
+
 
         footer {
             background-color: rgb(82, 82, 82);
@@ -68,12 +73,24 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                        aria-haspopup="true" aria-expanded="false">課程</a>
+                        aria-haspopup="true" aria-expanded="false">Web 基礎網頁設計</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="./WebDesign.html">Web 基礎網頁設計</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.w3schools.com/html/default.asp">w3schools HTML</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/css/default.asp">w3schools CSS</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/js/default.asp">w3schools JS</a>
+                        <a class="dropdown-item" href="https://www.w3schools.com/bootstrap/bootstrap_ver.asp">w3schools Bootstrap</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                        aria-haspopup="true" aria-expanded="false">Python 程式設計</a>
+                    <div class="dropdown-menu">
                         <a class="dropdown-item" href="./Python.html">Python 程式設計</a>
-                        <a class="dropdown-item" href="./WebApp.html">Web 應用程式開發</a>
-                        <a class="dropdown-item" href="./Database.html">資料庫應用</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="https://www.w3schools.com/python/default.asp">w3schools
+                            Python</a>
                     </div>
                 </li>
             </ul>
@@ -942,9 +959,9 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./">
+            <img src="./image/1.jpg">
             <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">1. Git版本控制</li>
@@ -965,9 +982,9 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./">
+            <img src="./image/2.jpg">
             <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">1. Intro</li>
@@ -988,9 +1005,9 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./">
+            <img src="./image/3.jpg">
             <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">1. OuO 保留文字空間</li>
@@ -1011,9 +1028,9 @@
                 <h5 class="card-title">Special title treatment</h5>
                 <h6 class="card-subtitle text-muted">Support card subtitle</h6>
             </div>
-            <img src="./">
+            <img src="./image/4.jpg">
             <div class="card-body">
-                <p class="card-text"></p>
+                <p class="card-text">沒圖 先放隻可愛貓貓</p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">1. OuO 保留文字空間</li>
